# limited-api-experiments

./: .gitignore  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
cython/: pyproject.toml  setup.cfg  setup.py  tox.ini
cython/test_cython/: example.pyx
cython_numpy/: pyproject.toml  setup.cfg  setup.py  tox.ini
cython_numpy/test_cython_numpy/: example.pyx
test_cython/: example.pyx  utils.pxd  utils.pyx
