[metadata]
name = test-cython
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
description = Test limited API with Cython

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[bdist_wheel]
py_limited_api = cp37

[options.package_data]
test_cython = pnpoly.pxd
