[metadata]
name = test-cython-numpy
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
description = Test limited API with Cython and Numpy

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
python_requires = >=3.8

[bdist_wheel]
py_limited_api = cp38
